--- a/3. string_Python.md
+++ b/3. string_Python.md
@@ -312,4 +312,9 @@ String1 = "|{:<10}|{:^10}|{:>10}|".format('Geeks','for','Geeks')
 print("\nLeft, center and right alignment with Formatting: ")
 print(String1)
 ```
-![String Constants ](file:///Users/spider/Desktop/Python_GKG/IMG/1.png "String Constant")
+![String Constants ](https://github.com/spiderOO7/python-reference-notes/blob/master/IMG/1.png "String Constant")
+
+![String Constants ](https://github.com/spiderOO7/python-reference-notes/blob/master/IMG/1.png "String Constant")
+
+---
+### Pattern Matching in Python with regex
