--- a/3. string_Python.md
+++ b/3. string_Python.md
@@ -318,3 +318,148 @@ print(String1)
 
 ---
 ### Pattern Matching in Python with regex
+
+* Creating Regex object, Matching regex objects
+```python
+import re
+phoneNumRegex = re.compile(r'\d\d\d-\d\d\d-\d\d\d\d')
+mo = phoneNumRegex.search('My number is 415-555-4242.')
+print('Phone number found: ' + mo.group())
+
+#OUTPUT
+Phone number found: 415-555-4242
+```
+
+#### Steps of Regular Expression Matching
+
+**While there are several steps to using regular expressions in Python, each step is fairly simple.**
+1. Import the regex module with import re.
+2. Create a Regex object with the re.compile() function. (Remember to use a raw string.)
+3. Pass the string you want to search into the Regex object’s search() method. This returns a Match object.
+4. Call the Match object’s group() method to return a string of the actual matched text.
+
+#### Grouping with parentheses
+
+```python
+import re
+phoneNumRegex = re.compile(r'(\d\d\d)-(\d\d\d-\d\d\d\d)')
+mo = phoneNumRegex.search('My number is 415-555-4242.')
+
+# Matching objects:
+print(mo.group(1))
+#OUTPUT
+'415'
+
+# Retrieve all the groups at once:
+print(mo.groups())
+#OUTPUT
+('415', '555-4242')
+
+# Using mo.groups
+areaCode, mainNumber = mo.groups()
+print(mainNumber)
+#OUTPUT
+'555-4242'
+
+# Matching with paranthesis
+phoneNumRegex = re.compile(r'(\(\d\d\d\)) (\d\d\d-\d\d\d\d)')
+mo = phoneNumRegex.search('My phone number is (415) 555-4242.')
+print(mo.group(1))
+#OUTPUT
+'(415)'
+```
+**Matching Specific Repetitions with Curly Brackets**
+* the regex (Ha){3} will match the string 'HaHaHa', but it will not match 'HaHa'
+* the regex (Ha){3, 5} will match 'HaHaHa', 'HaHaHaHa', and 'HaHaHaHaHa'.
+
+```python
+import re
+haRegex = re.compile(r'(Ha){3}')
+mo1 = haRegex.search('HaHaHa')
+print(mo1.group())
+#OUTPUT
+'HaHaHa'
+
+mo2 = haRegex.search('Ha')== None
+print(mo2)
+#OUTPUT
+True
+```
+* Optional Matching with the Question Mark
+
+```python
+import re
+batRegex = re.compile(r'Bat(wo)?man')
+mo1 = batRegex.search('The Adventures of Batman')
+print(mo1.group())
+#OUTPUT
+'Batman'
+
+
+mo2 = batRegex.search('The Adventures of Batwoman')
+print(mo2.group())
+#OUTPUT
+'Batwoman'
+```
+* Matching Zero or More with the Star
+
+```python
+import re
+batRegex = re.compile(r'Bat(wo)*man')
+mo1 = batRegex.search('The Adventures of Batman')
+print(mo1.group())
+#OUTPUT
+'Batman'
+
+mo2 = batRegex.search('The Adventures of Batwoman')
+print(mo2.group())
+#OUTPUT
+'Batwoman'
+
+mo3 = batRegex.search('The Adventures of Batwowowowoman')
+print(mo3.group())
+#OUTPUT
+'Batwowowowoman'
+```
+
+* Matching One or More with the Plus
+
+```
+batRegex = re.compile(r'Bat(wo)+man')
+```
+---
+### extract maximum numeric value from that string.
+```python
+# Function to extract maximum numeric value from 
+# a given string
+import re
+
+def extractMax(input):
+
+     # get a list of all numbers separated by 
+     # lower case characters 
+     # \d+ is a regular expression which means
+     # one or more digit
+     # output will be like ['100','564','365']
+     numbers = re.findall('\d+',input)
+
+     # now we need to convert each number into integer
+     # int(string) converts string into integer
+     # we will map int() function onto all elements 
+     # of numbers list
+     numbers = map(int,numbers)
+
+     print max(numbers)
+
+# Driver program
+if __name__ == "__main__":
+    input = '100klh564abc365bg'
+    extractMax(input)
+```
+---
+# Extra
+
+```python
+arr = [1,2,3]
+arr[1:]#  1->end
+```
