Finised list module

--- a/5. Python_list.md
+++ b/5. Python_list.md
@@ -771,3 +771,190 @@ print(Tuple1) # ERROR
 ```
 ![String Constants ](https://github.com/spiderOO7/python-reference-notes/blob/master/IMG/54.png "String Constant")
 ----
+### Count occurrences of an element in a list
+
+**Method 1** (Simple approach) We keep a counter that keeps on increasing if the esquired element is found in the list.
+
+```python
+# Python code to count the number of occurrences
+def countX(lst, x):
+    count = 0
+    for ele in lst:
+        if (ele == x):
+            count = count + 1
+    return count
+
+# Driver Code
+lst = [8, 6, 8, 10, 8, 20, 10, 8, 8]
+x = 8
+print('{} has occured {} times'.format(x, countX(lst, x)))
+
+#Output:
+#8 has occured 5 times
+```
+
+**Method 2** (Using count()) The idea is to use list method count() to count number of occurrences.
+```python
+# Python code to count the number of occurrences
+def countX(lst, x):
+    return lst.count(x)
+
+# Driver Code
+lst = [8, 6, 8, 10, 8, 20, 10, 8, 8]
+x = 8
+print('{} has occured {} times'.format(x, countX(lst, x)))
+
+#Output:
+#8 has occured 5 times 
+```
+**Method 3** (Using Counter()) Counter method returns a dictionary with occurences of all elements as a key-value pair, where key is the element and value is the number of times that element has occured.
+
+```python
+from collections import Counter
+
+# declaring the list
+l = [1, 1, 2, 2, 3, 3, 4, 4, 5, 5]
+
+# driver program
+x = 3
+d = Counter(l)
+print('{} has occured {} times'.format(x, d[x]))
+
+#Output:
+#3 has occured 2 times
+```
+---
+### sort the list of tuples in increasing order by any key in tuple
+
+```python
+# Python code to sort a list of tuples 
+# according to given key.
+
+# get the last key.
+def last(n):
+    return n[m]  
+ 
+# function to sort the tuple   
+def sort(tuples):
+
+    # We pass used defined function last
+    # as a parameter. 
+    return sorted(tuples, key = last)
+ 
+# driver code  
+a = [(23, 45, 20), (25, 44, 39), (89, 40, 23)]
+m = 2
+print("Sorted:"),
+print(sort(a))
+
+#OUTPUT
+#Sorted: [(23, 45, 20), (89, 40, 23), (25, 44, 39)] 
+```
+---
+### Reversing a Tuple
+
+**Method 1**: Using the slicing technique. In this technique, a copy of the tuple is made and the tuple is not sorted in-place. Since tuples are immutable, there is no way to reverse a tuple in-place. Creating a copy requires more space to hold all of the existing elements. Therefore, this exhausts memory.
+```python
+# Reversing a tuple using slicing technique
+# New tuple is created
+def Reverse(tuples):
+    new_tup = tuples[::-1]
+    return new_tup
+    
+# Driver Code
+tuples = ('z','a','d','f','g','e','e','k')
+print(Reverse(tuples))
+
+#Output:
+#('k', 'e', 'e', 'g', 'f', 'd', 'a', 'z')
+```
+
+**Method 2**: Using the reversed() built-in function. In this method, we do not make any copy of the tuple. Instead, we get a reverse iterator which we use to cycle through the tuple, similar to the list.
+
+```python
+# Reversing a list using reversed()
+def Reverse(tuples):
+    new_tup = ()
+    for k in reversed(tuples):
+        new_tup = new_tup + (k,)
+    print new_tup
+
+# Driver Code
+tuples = (10, 11, 12, 13, 14, 15)
+Reverse(tuples)
+
+#Output:
+#(15, 14, 13, 12, 11, 10)
+```
+---
+### Remove empty tuples from a list
+
+**Method 1**: Using the concept of List Comprehension
+
+```python
+# Python program to remove empty tuples from a 
+# list of tuples function to remove empty tuples 
+# using list comprehension
+def Remove(tuples):
+    tuples = [t for t in tuples if t]
+    return tuples
+
+# Driver Code
+tuples = [(), ('ram','15','8'), (), ('laxman', 'sita'), 
+          ('krishna', 'akbar', '45'), ('',''),()]
+print(Remove(tuples))
+
+#Output:
+#[('ram', '15', '8'), ('laxman', 'sita'), ('krishna', 'akbar', '45'), ('', '')]
+```
+
+**Method 2**: Using the filter() method Using the inbuilt method filter() in Python, we can filter out the empty elements by passing the None as the parameter. This method works in both Python 2 and Python 3 and above, but the desired output is only shown in Python 2 because Python 3 returns a generator. filter() is the faster than the method of list comprehension. Let's see what happens when we run the program in Python 2.
+
+```python
+# Python2 program to remove empty tuples
+# from a list of tuples function to remove 
+# empty tuples using filter
+def Remove(tuples):
+    tuples = filter(None, tuples)
+    return tuples
+
+# Driver Code
+tuples = [(), ('ram','15','8'), (), ('laxman', 'sita'), 
+          ('krishna', 'akbar', '45'), ('',''),()]
+print(Remove(tuples))
+
+#Output:
+#[('ram', '15', '8'), ('laxman', 'sita'), ('krishna', 'akbar', '45'), ('', '')]
+```
+---
+### Program to print duplicates from a list of integers
+
+Given a list of integers with duplicate elements in it. The task to generate another list, which contains only the duplicate elements. In simple words, the new list should contain the elements which appear more than one.
+```python
+
+# Python program to print 
+# duplicates from a list 
+# of integers
+def Repeat(x):
+    _size = len(x)
+    repeated = []
+    for i in range(_size):
+        k = i + 1
+        for j in range(k, _size):
+            if x[i] == x[j] and x[i] not in repeated:
+                repeated.append(x[i])
+    return repeated
+
+# Driver Code
+list1 = [10, 20, 30, 20, 20, 30, 40, 
+         50, -20, 60, 60, -20, -20]
+print (Repeat(list1))
+    
+# This code is contributed 
+# by Sandeep_anand
+
+#OUTPUT
+# [20, 30, -20, 60]
+```
+---
+# Extra
