--- a/6. Dictionary_and_Sets.md
+++ b/6. Dictionary_and_Sets.md
@@ -1,2 +1,227 @@
 # Dictionary and Sets
 ---
+
+Dictionary in Python is an unordered collection of data values, used to store data values like a map, which unlike other Data Types that hold only single value as an element, Dictionary holds key:value pair. Key value is provided in the dictionary to make it more optimized. Each key-value pair in a Dictionary is separated by a colon :, whereas each key is separated by a 'comma'. 
+
+A Dictionary in Python works similar to the Dictionary in a real world. Keys of a Dictionary must be unique and of immutable data type such as Strings, Integers and tuples, but the key-values can be repeated and be of any type.
+
+**Note** - Keys in a dictionary doesn't allows Polymorphism.
+
+### Creating a Dictionary
+```python
+# Creating an empty Dictionary
+Dict = {}
+print("Empty Dictionary: ")
+print(Dict)
+
+# Creating a Dictionary 
+# with Integer Keys
+Dict = {1: 'Geeks', 2: 'For', 3: 'Geeks'}
+print("\nDictionary with the use of Integer Keys: ")
+print(Dict)
+
+# Creating a Dictionary 
+# with Mixed keys
+Dict = {'Name': 'Geeks', 1: [1, 2, 3, 4]}
+print("\nDictionary with the use of Mixed Keys: ")
+print(Dict)
+
+# Creating a Dictionary
+# with dict() method
+Dict = dict({1: 'Geeks', 2: 'For', 3:'Geeks'})
+print("\nDictionary with the use of dict(): ")
+print(Dict)
+
+# Creating a Dictionary
+# with each item as a Pair
+Dict = dict([(1, 'Geeks'), (2, 'For')])
+print("\nDictionary with each item as a pair: ")
+print(Dict)
+
+#OUTPUT
+#Empty Dictionary: 
+#{}
+
+#Dictionary with the use of Integer Keys: 
+#{1: 'Geeks', 2: 'For', 3: 'Geeks'}
+
+#Dictionary with the use of Mixed Keys: 
+#{1: [1, 2, 3, 4], 'Name': 'Geeks'}
+
+#Dictionary with the use of dict(): 
+#{1: 'Geeks', 2: 'For', 3: 'Geeks'}
+
+#Dictionary with each item as a pair: 
+#{1: 'Geeks', 2: 'For'}
+```
+
+### Nested Dictionary:
+```python
+# Creating a Nested Dictionary 
+# as shown in the below image
+Dict = {1: 'Geeks', 2: 'For', 
+        3:{'A' : 'Welcome', 'B' : 'To', 'C' : 'Geeks'}}
+
+print(Dict) 
+```
+
+### Adding elements to a Dictionary
+**Note**- While adding a value, if the key value already exists, the value gets updated otherwise a new Key with the value is added to the Dictionary.
+
+```python
+# Creating an empty Dictionary
+Dict = {}
+print("Empty Dictionary: ")
+print(Dict)
+
+# Adding elements one at a time
+Dict[0] = 'Geeks'
+Dict[2] = 'For'
+Dict[3] = 1
+print("\nDictionary after adding 3 elements: ")
+print(Dict)
+
+# Adding set of values 
+# to a single Key
+Dict['Value_set'] = 2, 3, 4
+print("\nDictionary after adding 3 elements: ")
+print(Dict)
+
+# Updating existing Key's Value
+Dict[2] = 'Welcome'
+print("\nUpdated key value: ")
+print(Dict)
+
+# Adding Nested Key value to Dictionary
+Dict[5] = {'Nested' :{'1' : 'Life', '2' : 'Geeks'}}
+print("\nAdding a Nested Key: ")
+print(Dict)
+
+#OUTPUT
+#Empty Dictionary: 
+#{}
+
+#Dictionary after adding 3 elements: 
+#{0: 'Geeks', 2: 'For', 3: 1}
+
+#Dictionary after adding 3 elements: 
+#{0: 'Geeks', 2: 'For', 3: 1, 'Value_set': (2, 3, 4)}
+
+#Updated key value: 
+#{0: 'Geeks', 2: 'Welcome', 3: 1, 'Value_set': (2, 3, 4)}
+
+#Adding a Nested Key: 
+#{0: 'Geeks', 2: 'Welcome', 3: 1, 5: {'Nested': {'1': 'Life', '2': 'Geeks'}}, 'Value_set': (2, 3, 4)}
+```
+
+### Accessing elements from a Dictionary
+```python
+# Python program to demonstrate  
+# accesing a element from a Dictionary 
+
+# Creating a Dictionary 
+Dict = {1: 'Geeks', 'name': 'For', 3: 'Geeks'}
+
+# accessing a element using key
+print("Acessing a element using key:")
+print(Dict['name'])
+
+# accessing a element using key
+print("Acessing a element using key:")
+print(Dict[1])
+
+# accessing a element using get()
+# method
+print("Acessing a element using get:")
+print(Dict.get(3))
+
+#OUTPUT
+#Acessing a element using key:
+#For
+
+#Acessing a element using key:
+#Geeks
+
+#Acessing a element using get:
+#Geeks
+```
+
+### Removing Elements from Dictionary
+
+```python
+
+
+# Initial Dictionary
+Dict = { 5 : 'Welcome', 6 : 'To', 7 : 'Geeks',
+        'A' : {1 : 'Geeks', 2 : 'For', 3 : 'Geeks'},
+        'B' : {1 : 'Geeks', 2 : 'Life'}}
+print("Initial Dictionary: ")
+print(Dict)
+
+# Deleting a Key value
+del Dict[6]
+print("\nDeleting a specific key: ")
+print(Dict)
+
+# Deleting a Key from
+# Nested Dictionary
+del Dict['A'][2]
+print("\nDeleting a key from Nested Dictionary: ")
+print(Dict)
+
+# Deleting a Key 
+# using pop()
+Dict.pop(5)
+print("\nPopping specific element: ")
+print(Dict)
+
+# Deleting a Key
+# using popitem()
+Dict.popitem()
+print("\nPops first element: ")
+print(Dict)
+
+# Deleting entire Dictionary
+Dict.clear()
+print("\nDeleting Entire Dictionary: ")
+print(Dict)
+
+#OUTPUT
+#Initial Dictionary: 
+#{'A': {1: 'Geeks', 2: 'For', 3: 'Geeks'}, 'B': {1: 'Geeks', 2: 'Life'}, 5: 'Welcome', 6: 'To', 7: 'Geeks'}
+
+#Deleting a specific key: 
+#{'A': {1: 'Geeks', 2: 'For', 3: 'Geeks'}, 'B': {1: 'Geeks', 2: 'Life'}, 5: 'Welcome', 7: 'Geeks'}
+
+#Deleting a key from Nested Dictionary: 
+#{'A': {1: 'Geeks', 3: 'Geeks'}, 'B': {1: 'Geeks', 2: 'Life'}, 5: 'Welcome', 7: 'Geeks'}
+
+#Popping specific element: 
+#{'A': {1: 'Geeks', 3: 'Geeks'}, 'B': {1: 'Geeks', 2: 'Life'}, 7: 'Geeks'}
+
+#Pops first element: 
+#{'B': {1: 'Geeks', 2: 'Life'}, 7: 'Geeks'}
+
+#Deleting Entire Dictionary: 
+#{}
+```
+
+### Dictionary Methods
+![String Constants ](https://github.com/spiderOO7/python-reference-notes/blob/master/IMG/61.png "String Constant")
+
+![String Constants ](https://github.com/spiderOO7/python-reference-notes/blob/master/IMG/62.png "String Constant")
+
+---
+
+
+
+
+
+
+
+
+
+
+
+
+
