--- a/6. Dictionary_and_Sets.md
+++ b/6. Dictionary_and_Sets.md
@@ -213,8 +213,327 @@ print(Dict)
 
 ---
 
+### Dictionary Methods in Python | Set 1 (cmp(), len(), items()...)
+
+1. **str(dic)** :- This method is used to return the string, denoting all the dictionary keys with their values.
+
+2. **items()** :- This method is used to return the list with all dictionary keys with values.
+
+```python
+
+# Python code to demonstrate working of
+# str() and items()
+
+# Initializing dictionary
+dic = { 'Name' : 'Nandini', 'Age' : 19 }
+
+# using str() to display dic as string
+print ("The constituents of dictionary as string are : ")
+print (str(dic))
+
+# using str() to display dic as list
+print ("The constituents of dictionary as list are : ")
+print (dic.items())
 
 
+#Output:
+#The constituents of dictionary as string are : 
+#{'Name': 'Nandini', 'Age': 19}
+#The constituents of dictionary as list are : 
+#dict_items([('Name', 'Nandini'), ('Age', 19)])
+```
+
+3. **len()** :- It returns the count of key entities of the dictionary elements.
+
+4. **type()** :- This function returns the data type of the argument.
+
+```python
+
+# Python code to demonstrate working of
+# len() and type()
+
+# Initializing dictionary
+dic = { 'Name' : 'Nandini', 'Age' : 19, 'ID' : 2541997 }
+
+# Initializing list
+li = [ 1, 3, 5, 6 ]
+
+# using len() to display dic size
+print ("The size of dic is : ",end="")
+print (len(dic))
+
+# using type() to display data type
+print ("The data type of dic is : ",end="")
+print (type(dic))
+
+# using type() to display data type
+print ("The data type of li is : ",end="")
+print (type(li))
+
+#Output:
+#The size of dic is : 3
+#The data type of dic is : 
+#The data type of li is : 
+```
+
+
+5. **copy()** :- This function creates the shallow copy of the dictionary into other dictionary.
+
+6. **clear()** :- This function is used to clear the dictionary contents.
+
+```python
+
+# Python code to demonstrate working of
+# clear() and copy()
+
+# Initializing dictionary
+dic1 = { 'Name' : 'Nandini', 'Age' : 19 }
+
+# Initializing dictionary 
+dic3 = {}
+
+# using copy() to make shallow copy of dictionary
+dic3 = dic1.copy()
+
+# printing new dictionary
+print ("The new copied dictionary is : ")
+print (dic3.items())
+
+# clearing the dictionary
+dic1.clear()
+
+# printing cleared dictionary
+print ("The contents of deleted dictionary is : ",end="")
+print (dic1.items())
+
+
+#Output:
+#The new copied dictionary is : 
+#dict_items([('Age', 19), ('Name', 'Nandini')])
+#The contents of deleted dictionary is : dict_items([])
+```
+
+---
+###   Dictionary Methods in Python | Set 2 (update(), has_key(), fromkeys()...)
+
+1. **fromkeys(seq,value)** :- This method is used to declare a new dictionary from the sequence mentioned in its arguments. This function can also initialize the declared dictionary with "value" argument. 
+
+2. **update(dic)** :- This function is used to update the dictionary to add other dictionary keys.
+
+```python
+
+# Python code to demonstrate working of
+# fromkeys() and update()
+
+# Initializing dictionary 1
+dic1 = { 'Name' : 'Nandini', 'Age' : 19 }
+
+# Initializing dictionary 2
+dic2 = { 'ID' : 2541997 }
+
+# Initializing sequence
+sequ = ('Name', 'Age', 'ID')
+
+# using update to add dic2 values in dic 1
+dic1.update(dic2)
+
+# printing updated dictionary values
+print ("The updated dictionary is : ")
+print (str(dic1))
+
+# using fromkeys() to transform sequence into dictionary
+dict = dict.fromkeys(sequ,5)
+
+# printing new dictionary values
+print ("The new dictionary values are : ")
+print (str(dict))
+
+#Output:
+#The updated dictionary is : 
+#{'Age': 19, 'Name': 'Nandini', 'ID': 2541997}
+#The new dictionary values are : 
+#{'Age': 5, 'Name': 5, 'ID': 5}
+```
+
+3. **has_key()** :- This function returns true if specified key is present in the dictionary, else returns false.
+
+4. **get(key, def_val)** :- This function return the key value associated with the key mentioned in arguments. If key is not present, the default value is returned.
+
+
+```python
+
+# Python code to demonstrate working of
+# has_key() and get()
+
+# Initializing dictionary
+dict = { 'Name' : 'Nandini', 'Age' : 19 }
+
+# using has_key() to check if dic1 has a key
+if dict.has_key('Name'):
+       print ("Name is a key")
+else : print ("Name is not a key")
+
+# using get() to print a key value
+print ("The value associated with ID is : ")
+print (dict.get('ID', "Not Present"))
+
+# printing dictionary values
+print ("The dictionary values are : ")
+print (str(dict))
+
+
+#Output:
+#Name is a key
+#The value associated with ID is : 
+#Not Present
+#The dictionary values are : 
+#{'Name': 'Nandini', 'Age': 19}
+```
+
+
+5. **setdefault(key, def_value)** :- This function also searches for a key and displays its value like get() but, it creates new key with def_value if key is not present.
+
+```python
+
+# Python code to demonstrate working of
+# setdefault()
+
+# Initializing dictionary
+dict = { 'Name' : 'Nandini', 'Age' : 19 }
+
+# using setdefault() to print a key value
+print ("The value associated with Age is : ",end="")
+print (dict.setdefault('ID', "No ID"))
+
+# printing dictionary values
+print ("The dictionary values are : ")
+print (str(dict))
+
+
+#Output:
+#The value associated with Age is : No ID
+#The dictionary values are : 
+#{'Name': 'Nandini', 'Age': 19, 'ID': 'No ID'}
+```
+---
+
+### Majority Element
+
+```python
+
+# Function to find majority element
+from collections import Counter
+
+def majority(arr):
+
+    # convert array into dictionary
+    freqDict = Counter(arr)
+
+    # traverse dictionary and check majority element
+    size = len(arr)
+    for (key,val) in freqDict.items():
+         if (val > (size/2)):
+             print(key)
+             return
+    print('None')
+
+# Driver program
+if __name__ == "__main__":
+    arr = [3,3,4,2,4,4,2,4,4] 
+    majority(arr)
+
+#OUTPUT
+#4
+```
+---
+### Find common elements in three sorted arrays by dictionary intersection
+
+```python
+
+# Function to find common elements in three
+# sorted arrays
+from collections import Counter
+
+def commonElement(ar1,ar2,ar3):
+     # first convert lists into dictionary
+     ar1 = Counter(ar1)
+     ar2 = Counter(ar2)
+     ar3 = Counter(ar3)
+   
+     # perform intersection operation
+     resultDict = dict(ar1.items() & ar2.items() & ar3.items())
+     common = []
+    
+     # iterate through resultant dictionary
+     # and collect common elements
+     for (key,val) in resultDict.items():
+          for i in range(0,val):
+               common.append(key)
+
+     print(common)
+
+# Driver program
+if __name__ == "__main__":
+    ar1 = [1, 5, 10, 20, 40, 80]
+    ar2 = [6, 7, 20, 80, 100]
+    ar3 = [3, 4, 15, 20, 30, 70, 80, 120]
+    commonElement(ar1,ar2,ar3)
+
+#OUTPUT
+# [80,20]
+```
+---
+### Convert a list of Tuples into Dictionary
+
+**Method 1** : Use of setdefault()
+
+Here we have used the dictionary method setdefault() to convert the first parameter to key and the second to the value of the dictionary. setdefault(key, def_value) function searches for a key and displays its value and creates a new key with def_value if the key is not present. Using the append function we just added the values to the dictionary.
+
+```python
+
+# Python code to convert into dictionary
+
+def Convert(tup, di):
+    for a, b in tup:
+        di.setdefault(a, []).append(b)
+    return di
+    
+# Driver Code    
+tups = [("akash", 10), ("gaurav", 12), ("anand", 14), 
+     ("suraj", 20), ("akhil", 25), ("ashish", 30)]
+dictionary = {}
+print (Convert(tups, dictionary))
+
+#Output:
+#{'akash': [10], 'gaurav': [12], 'anand': [14], 
+# 'ashish': [30], 'akhil': [25], 'suraj': [20]}
+```
+
+**Method 2** : Use of dict() method
+
+This is a simple method of conversion from a list or tuple to a dictionary. Here we pass a tuple into the dict() method which converts the tuple into the corresponding dictionary.
+
+```python
+
+
+# Python code to convert into dictionary
+def Convert(tup, di):
+    di = dict(tup)
+    return di
+    
+# Driver Code 
+tups = [("akash", 10), ("gaurav", 12), ("anand", 14), 
+    ("suraj", 20), ("akhil", 25), ("ashish", 30)]
+dictionary = {}
+print (Convert(tups, dictionary))
+
+
+#Output:
+#{'anand': 14, 'akash': 10, 'akhil': 25, 
+# 'suraj': 20, 'ashish': 30, 'gaurav': 12}
+```
+---
+# Extra
 
 
 
