added cheat sheat

--- a/6. Dictionary_and_Sets.md
+++ b/6. Dictionary_and_Sets.md
@@ -533,7 +533,21 @@ print (Convert(tups, dictionary))
 # 'suraj': 20, 'ashish': 30, 'gaurav': 12}
 ```
 ---
-# Extra
+# SET
+
+A set is an unordered collection of items where every element is unique and must be immutable, but set is mutable. You cannot access an element of set using indexing or slicing, but you can update the set.
+
+**Some important functions in Set in Python:**<br>
+* **add()**: Adds an element to the set.
+* **clear()**: Removes all elements from the set
+* **discard()**: Removes an element from the set if present.
+* **remove()**: Removes an element from the set. If the element is not present, it raises error.
+* **pop()**: Removes and returns an arbitary set element. Raise error if the set is empty.
+* **union()**: Returns the union of sets in a new set
+* **update()**: Updates the set with the union of itself and others
+* **len()**: Return the length of set.
+* **sorted()**: Return a new sorted list from elements in the set.
+* **sum()**: Return the sum of all elements in the set.
 
 
 
